# serpside

./: .dockerignore  .gitignore  Caddyfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: .env.example  main.py  pyproject.toml
frontend/: app.vue  nuxt.config.ts  package.json
frontend/assets/css/: main.css
frontend/components/: FoodExplorer.vue  Icon.vue  LocationPicker.vue  SwagOrPass.vue  ThemeToggle.vue
frontend/composables/: useMusic.ts  useTheme.ts
frontend/pages/: index.vue
frontend/server/api/: [...slug].ts
