[project]
name = "serpside-backend"
version = "0.1.0"
description = "SerpSide API - Food Explorer & Swag or Pass"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "serpapi>=1.0.2",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
serve = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
